- Code completion works even if there's a comment at the end of the document. Fixes #777
- When creating a leiningen project, the dependencies were updated twice. Fixes #817
- Editor code completion suggests Clojure special forms (`do let etc.`) appropriately. Fixes #823

=== Miscellaneous Enhancements
- Print maven coordinates of Counterclockwise dependencies at plugin startup in `.metadata/.log`. Fixes #741
- Launching REPLs from launch configurations now correctly opens up a `REPL View` if the process outputs an nrepl URL in the stdout Console
- Namespace Browser now opens external files correctly when double clicking on a var label (e.g. will open internal Eclipse files, user plugin files, etc.)

=== Counterclockwise embedded nREPL
Counterclockwise ships with an embedded nREPL server. The following enhancements have been applied:

- New Command Line option `-Dccw.nrepl.port=[1-65535]`: allows to select the embedded nrepl port.
- Command Line option `ccw.autostartrepl` has been renamed to `ccw.nrepl.autostart`.
- When Command Line option `ccw.autostartrepl` is specified, the `cider-nrepl` middleware is used instead of the nRepl default middleware.

=== Counterclockwise/Standalone
- Adjusted JVM parameters to have a faster startup (-server, -Xverify:none, -Xms256m -Xmx1024m)


== Counterclockwise 0.31.2

`0.31.2` released on December 4, 2014

=== User Plugins

- Added namespace `ccw.api.markers` for managing resource markers. Resource markers typically appear in the editor margins (error markers, warning markers, tasks, bookmarks, etc.), and in their respective problem views, task views, bookmark views, etc.

Example: creating a new type of marker `ccw-plugin-clj-lint`, simply inheriting from Eclipse-provided Problem markers (implicit inheritence if not provided), with markers that will persist across Eclipse restarts. Then creating a marker for some imaginary `foo.clj` file, located in project `my-project`, in subfolder `src/bar/`

[source,clojure]
----